[gd_scene load_steps=9 format=3 uid="uid://ogo7kqhsjr16"]

[ext_resource type="Script" path="res://Code/PlayerCar/player_car.gd" id="1_jkyj6"]
[ext_resource type="Resource" uid="uid://scmvn5oaw2ff" path="res://Data/playerCarData.tres" id="2_h6sde"]
[ext_resource type="Texture2D" uid="uid://busyniubtbcw7" path="res://Textures/Cars/cars.png" id="3_d2sdb"]
[ext_resource type="Resource" uid="uid://dejwp1x3xijvq" path="res://Data/car_color_data.tres" id="3_jkvo0"]
[ext_resource type="Script" path="res://Code/PlayerCar/inputs.gd" id="4_q5hnn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56wgx"]
size = Vector2(30, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_rqibm"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wo8ut"]
radius = 2.0

[node name="PlayerCar" type="CharacterBody2D"]
process_mode = 1
collision_layer = 2
motion_mode = 1
script = ExtResource("1_jkyj6")
data = ExtResource("2_h6sde")
car_colors = ExtResource("3_jkvo0")

[node name="move_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_56wgx")

[node name="outline" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_d2sdb")
vframes = 6

[node name="body" type="Sprite2D" parent="outline"]
unique_name_in_owner = true
texture = ExtResource("3_d2sdb")
vframes = 6
frame = 4

[node name="windows" type="Sprite2D" parent="outline"]
unique_name_in_owner = true
texture = ExtResource("3_d2sdb")
vframes = 6
frame = 5

[node name="front" type="ColorRect" parent="."]
visible = false
offset_left = 22.0
offset_top = -2.0
offset_right = 26.0
offset_bottom = 2.0
color = Color(0.376463, 0, 0.0391056, 1)

[node name="back" type="ColorRect" parent="."]
visible = false
offset_left = -26.0
offset_top = -2.0
offset_right = -22.0
offset_bottom = 2.0
color = Color(0.376463, 0, 0.0391056, 1)

[node name="inputs" type="Node2D" parent="."]
script = ExtResource("4_q5hnn")

[node name="front_detector" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-9, 0)
collision_layer = 2
collision_mask = 4

[node name="collider" type="CollisionShape2D" parent="front_detector"]
position = Vector2(24, 0)
shape = SubResource("CircleShape2D_rqibm")

[node name="back_detector" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, 0)
collision_layer = 2
collision_mask = 4

[node name="collider" type="CollisionShape2D" parent="back_detector"]
position = Vector2(-24, 0)
shape = SubResource("CircleShape2D_wo8ut")
